--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@multiversx/sdk-core": "^13.17.2",
     "axios": "^1.8.2",
+    "crypto-browserify": "^3.12.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
